# polar-codes-with-bch-kernel

./: .gitignore  CMakeLists.txt  bchCoder.cpp  bchCoder.h  plot.py
headers/: Decoder.h  KanekoKernelProcessor.h  bchCoder.h  dataForPlot.h
in/: infile.txt
src/: Decoder.cpp  KanekoConfig.h.in  KanekoKernelProcessor.cpp  bchCoder.cpp  dataForPlot.cpp  main.cpp  matrixMain.cpp
